Ajustes processo Deposito Varejistas
