# src/IO.Swagger/wwwroot/swagger-original.json
@@ -1927,6 +1927,7 @@
         "InfConsultaConta" : {
           "solicDoc" : "00",
           "modalidadeDeposito" : "00",
+          "depositoVarejista" : "01",
           "nomeCliente" : "Carl Edward Sagan",
           "depositoIdentificado" : "00",
           "habilitaDeposito" : "01"
@@ -3111,12 +3112,19 @@
           "example" : "00",
           "description" : "Indica se deve ser solicitado o CPF/CNPJ do depositante (00 = Não / 01 = Sim).",
           "enum" : [ "00", "01" ]
+        },
+        "depositoVarejista" : {
+          "type" : "string",
+          "example" : "01",
+          "description" : "Indica se a conta em questão permite Depósito Varejista  (00 = Não / 01 = Sim).",
+          "enum" : [ "00", "01" ]
         }
       },
       "description" : "Informações da resposta da requisição de consulta de conta do favorecido.",
       "example" : {
         "solicDoc" : "00",
         "modalidadeDeposito" : "00",
+        "depositoVarejista" : "01",
         "nomeCliente" : "Carl Edward Sagan",
         "depositoIdentificado" : "00",
         "habilitaDeposito" : "01"
